cabal-version:      3.4
name:               ekg-ghc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Domen Kožar
maintainer:         domen@cachix.org
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  System.Metrics.GHC
    build-depends:    base, ekg-core, unordered-containers
    hs-source-dirs:   src
    default-language: GHC2021
